src/test/fail/inherit_builtin.ly
#[
SyntaxError: Cannot inherit from builtin classes. Sorry.
Where: File "test/fail/inherit_builtin.ly" at line 6
]#

class abc() < integer {  }
